# EpiScan

./: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  build.sh  cmake_install.cmake  conanfile.txt  episcan  episcan-cli  gt_prjct.sh  network_report.json
build_net/: CMakeCache.txt  Makefile  cmake_install.cmake  episcan-net  traffic.json
cmake/: CMakeCache.txt  FindLibPCAP.cmake  Makefile  cmake_install.cmake
data/: remediation_db.json
docs/: architecture.md  benchmark.md  episcan.1  user_guide.md
include/analyzer/: CodeParser.hpp  CryptoDetector.hpp  InjectionDetector.hpp  UnsafeFunctionDetector.hpp  VulnDetector.hpp
include/app/: ScannerEngine.hpp
include/core/: Config.hpp  Cvss.hpp  Metrics.hpp  Report.hpp  Severity.hpp  Vulnerability.hpp
include/network/: BannerGrabber.hpp  CveLookup.hpp  NetworkvulAnalyzer.hpp  PortScanner.hpp  ServiceDetector.hpp  TrafficAnalyzer.hpp
scripts/: gen_test_pcap.py  smoke_test.sh
src/: cli_main.cpp  gui_main.cpp  main.cpp  net_main.cpp
src/analyzer/: CodeParser.cpp  CryptoDetector.cpp  InjectionDetector.cpp  UnsafeFunctionDetector.cpp  VulnDetector.cpp
src/app/: ScannerEngine.cpp
src/core/: Config.cpp  Cvss.cpp  Metrics.cpp  Report.cpp  Severity.cpp  Vulnerability.cpp
src/network/: BannerGrabber.cpp  CveLookup.cpp  NetworkvulAnalyzer.cpp  PortScanner.cpp  ServiceDetector.cpp  TrafficAnalyzer.cpp
tests/: CMakeLists.txt  test_code_parser.cpp  test_integration.cpp  test_port_scanner.cpp  test_service_detector.cpp  test_vuln_detector.cpp
tests/vulnerable_samples/: buffer_overflow.c  sql_injection.cpp  weak_crypto.c
